objects/Genesys_Care_Forecasting__c.object
<CustomObject>
    <fields>
        <fullName>APN_Number__c</fullName>
        <label>APN_Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_GARN_Code__c</fullName>
        <label>End User GARN Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <label>End User Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Subsidary_Code__c</fullName>
        <label>End User Subsidary Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Genesys Care Forecastings</relationshipLabel>
        <relationshipName>Genesys_Care_Forecastings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genesys_Care_Specialist__c</fullName>
        <formula>(Opportunity__r.Gene_Care_Specialist__r.FirstName + &apos; &apos; + Opportunity__r.Gene_Care_Specialist__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Genesys Care Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderMaintenanceEndDate__c</fullName>
        <description>If service contract is not blankService contract end date+term duration else Quote Maintenance start date.</description>
        <label>Header Maintenance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HeaderMaintenanceStartDate__c</fullName>
        <description>If service contract is not blankService contract end date+1 else Quote Maintenance start date.</description>
        <label>Header Maintenance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Id__c</fullName>
        <label>Internal Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_End_Date__c</fullName>
        <label>Maintenance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Start_Date__c</fullName>
        <label>Maintenance Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Genesys Care Forecastings</relationshipLabel>
        <relationshipName>Genesys_Care_Forecastings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Amount_EUR__c</fullName>
        <label>Posting Amount EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posting_Amount_USD__c</fullName>
        <label>Posting Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posting_Amount__c</fullName>
        <label>Posting Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posting_Month_Formula__c</fullName>
        <formula>MONTH(Posting_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posting Month Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posting_Month__c</fullName>
        <label>Posting Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posting_Year_Formula__c</fullName>
        <formula>YEAR(Posting_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posting Year Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Posting_Year__c</fullName>
        <label>Posting Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Incremental forecasting, populated with quote where Incremental revenue is calculated.</description>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Genesys Care Forecastings</relationshipLabel>
        <relationshipName>Genesys_Care_Forecastings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Schedule</fullName>
                </value>
                <value>
                    <fullName>Deferred Revenue</fullName>
                </value>
                <value>
                    <fullName>Recognized Revenue</fullName>
                </value>
                <value>
                    <fullName>Incremental Revenue</fullName>
                </value>
                <value>
                    <fullName>First Year Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Number__c</fullName>
        <label>SO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Genesys Care Forecastings</relationshipLabel>
        <relationshipName>Genesys_Care_Forecastings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_GARN_Code__c</fullName>
        <label>Sold To GARN Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Name__c</fullName>
        <label>Sold To Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Subsidary_Code__c</fullName>
        <label>Sold To Subsidary Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Genesys Care Forecastings (Sold To)</relationshipLabel>
        <relationshipName>Genesys_Care_Forecastings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_category__c</fullName>
        <description>Used to derive the FYM, Renewal categories under Billing Schedule, Deferred Revenue and Recognized Revenue types. Item description with &apos;Renewal&apos; or null will be considered Renewal. Item description containing &apos;new&apos; or &apos;New&apos; will be considered FYM.

Populated by workflow.</description>
        <label>Sub category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>FYM</fullName>
                </value>
                <value>
                    <fullName>Expected</fullName>
                </value>
                <value>
                    <fullName>Upside</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Genesys Care Forecasting</label>
    <nameField>
        <displayFormat>GCFN-{00000000}</displayFormat>
        <label>Genesys Care Forecasting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Genesys Care Forecastings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>